--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Fotoblog</h1>
     {% block content %}{% endblock content %}
+    {% if user.is_authenticated %}
+        <p>Vous êtes connecter en tant que {{ request.user }}. <a href="{% url 'logout' %}">Se déconnecter</a></p>
+    {% endif %}
     
 </body>
 </html>
