Vue d'authentification génerique

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
     <p>Vous êtes connecté !</p>
+    <p><a href="{% url 'password_change' %}">Changer de mot de passe</a></p>
 {% endblock content %}
