Creation module d'inscription

--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
+{% if user.is_anonymous %}
     <p>{{ message }}</p>
     <form action="" method="post">
-        {{ form.as_p}}
+        {{ form.as_p }}
         {% csrf_token %}
         <button type="submit">Se connecter</button>
     </form>
+    <p>Pas encore membre ? <a href="{% url 'signup' %}">Inscrivez-vous maintenant !</a></p>
+{% endif %}
 {% endblock content %}
