--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block content %}
+{% block login %}
 {% if user.is_anonymous %}
     <p>{{ message }}</p>
     <form action="" method="post">
@@ -7,6 +7,7 @@
         {% csrf_token %}
         <button type="submit">Se connecter</button>
     </form>
-    <p>Pas encore membre ? <a href="{% url 'signup' %}">Inscrivez-vous maintenant !</a></p>
+    <p>Pas encore membre ?</p>
+    <a href="{% url 'signup' %}">Inscrivez-vous maintenant !</a>
 {% endif %}
-{% endblock content %}
+{% endblock login %}
