--- a/blog/templates/blog/create_multiple_photos.html
+++ b/blog/templates/blog/create_multiple_photos.html
@@ -2,8 +2,11 @@
 {% block content %}
     <h2>Télécharger plusieurs photos</h2>
     <form action="" method="post" enctype="multipart/form-data">
-        {{ formset.as_p}}
+        {{ formset.management_form }}
         {% csrf_token %}
+        {% for form in formset %}
+            {{ form.as_p}}
+        {% endfor %}
         <button type="submit">Publier</button>
     </form>
 
